clusters/global/infrastructure/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels: { pod-security.kubernetes.io/enforce: baseline }
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels: { pod-security.kubernetes.io/enforce: baseline }
